--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,14 @@ name = "ksau-py"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+license = { text = "Apache-2.0" }
 authors = [
     { name = "Firdaus Hakimi", email = "hakimifirdaus944@gmail.com" }
 ]
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = [
+    "typer>=0.15.1",
+]
 
 [project.scripts]
 ksau-py = "ksau_py:main"
