--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+    "aiohttp>=3.11.12",
+    "anyio>=4.8.0",
+    "azure-identity>=1.20.0",
+    "msgraph-sdk>=1.21.0",
     "typer>=0.15.1",
 ]
 
