--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "aiohttp>=3.11.12",
     "anyio>=4.8.0",
     "azure-identity>=1.20.0",
-    "msgraph-sdk>=1.21.0",
+    "quickxorhash>=1.0.5",
     "rich>=13.9.4",
     "typer>=0.15.1",
 ]
